Update documentation + add more test